Bug 137594 - Chinese conversion run all the way through column 1024.
Summary: Chinese conversion run all the way through column 1024.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.2.2 release
Hardware: All All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-19 12:46 UTC by Mark Hung
Modified: 2020-10-23 13:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2020-10-19 12:46:01 UTC
Description:
Chinese conversion run all the way through column 1024 even if the content is in one cell.

Steps to Reproduce:
1. Insert Chinese content, such as 遠程MySQL連接遠程MySQL連接遠程MySQL連接 in A1.
2. Tools>Language>Chinese Conversion... and select traditional to simplified
3. Then OK.

Actual Results:
Cursor moving from A1 to the column 1024 and then stopped.

Expected Results:
Conversion should finish as soon as it process A1.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comparing this function with spellcheck. It completes immediately, without cursor running all the way to column 1024.
Comment 1 Ming Hua 2020-10-19 14:41:06 UTC
(In reply to Mark Hung from comment #0)
> Description:
> Chinese conversion run all the way through column 1024 even if the content
> is in one cell.
This is exactly the same behavior described in bug 104378 comment #8, although I'm not sure whether Franklin filed separate a bug or not.
Comment 2 Commit Notification 2020-10-20 06:10:22 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aa99b57cdc8cb3763aa935ed84e7d80c4e56a172

tdf#137594 prevent converting unallocated columns.

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Kevin Suo 2020-10-20 08:28:17 UTC
Yes, I also noticed this bug behaviour.
Comment 4 Xisco Faulí 2020-10-20 09:03:32 UTC
I can't reproduce the issue in

Version: 7.1.0.0.alpha0+
Build ID: f1d798151048dde3f48b124ef406416668d1e9c5
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

after running the conversion the cursor is in A1.
@Mark, @Kevin, are you on Win or on Linux ?
Comment 5 Kevin Suo 2020-10-20 11:17:14 UTC
(In reply to Xisco Faulí from comment #4)
I am on Fedora 32. It's not about the cursor was in A1 after the conversion. It's about running the conversion all the way through A1 to  column 1024, even though the other columns contain no data at all, as a result the conversion takes a lot of time to finish.
Comment 6 Commit Notification 2020-10-20 14:41:13 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/a9bad3ef281c825bf57437a1b5154e413d7f18cd

tdf#137594 prevent converting unallocated columns.

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.