tdf#137594 prevent converting unallocated columns.

Check col against GetAllocatedColumnsCount()
instead of MaxCol(). This prevents allocating
a new column just for converting an empty cell.

Change-Id: I5c8dcfffc2661ab9c4fd9c2c53ed389e57351517
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104528
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>